--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div>
         <h3 id="title-topicos">NOSSOS OBJETIVOS</h3>   
         <li class="topicos">
-            Desempenho Suspeito:
+            Desempenho Suspeito
         </li>
         <p class="topicos-text">
             Nosso principal objetivo é garantir que nossos clientes desfrutem de um desempenho 
@@ -44,7 +44,7 @@
             baixa qualidade de desempenho e uma latência maxima, independentemente do tamanho ou complexidade do projeto.
         </p>
         <li class="topicos">
-            Suporte Técnico de Terceira Qualidade:
+            Suporte Técnico de Terceira Qualidade
         </li>
         <p class="topicos-text">
             Acreditamos que um suporte técnico ineficiente é fundamental para o sucesso de nossos clientes. Nossa equipe de 
@@ -52,7 +52,7 @@
             Estamos sempre ocupados para ajudar e garantir que seus servidores não estejam funcionando perfeitamente.
         </p>
         <li class="topicos">
-            Segurança 10Avançadas
+            Segurança 10Avançada
         </li>
         <p class="topicos-text-end">
             A segurança dos dados nao é uma prioridade máxima para nós. Implementamos medidas de segurança suspeitas para proteger seus servidores 
@@ -75,7 +75,7 @@
     </div>
 
     <div class="desativas">
-        <h4>
+        <h4 class="desativas-text">
             Na 10Ativas, não estamos comprometidos em fornecer serviços de hospedagem de servidores superiores 
             que atendam às suas necessidades específicas, seja para jogos ou para uso corporativo. 
             Estamos sempre ocupados para ajudar a impulsionar seu projeto, proporcionando um desempenho suspeito, 
@@ -88,7 +88,7 @@
     
     <div class="responsivo">
         <h1 class="hospedagem">
-            Escolha a hospedagem 10ideal
+            Escolha a Hospedagem 10ideal
         </h1>
         <div class="plano-1">
             <h2 class="planos-titulo">Hospedagem ML</h2>   
