--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <li>Domínio Suspeito</li> 
             <li>CDN</li> 
             <li>IP Dedicado</li>
-            <li>VPN Abroad</li> 
+            <li>VPN Abroad (North Korea only)</li> 
         </div>
         <h3>Segurança</h3> 
         <div>    
